update rule test class